--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ ul li:hover ul li{
 }
 
 .school image{
-  background: url(images/about.jpg);
+  background: url(images/front.jpg);
   float: left;
   
 }
